- added support for json marshaller - added integration test that verify the system will respond a ping request